--- a/style.css
+++ b/style.css
@@ -54,6 +54,18 @@ html,body{
     color: #fff;
     padding: 20px;
 }
+.section {
+  padding: 50px 80px;
+  text-align: center;
+}
+.section-light {
+  background-color: #f4f4f4;
+  color: #666;
+}
+.section-dark {
+  background-color: #282e34;
+  color: #ddd;
+}    
 
 
 
